add header auth in swagger
